# libsvmintel

./: CMakeLists.txt  README.md  cmake_build.sh  pip_install.bat  pip_install.sh  setup.py  svm.cpp  svm_intel.cpp  svm_intel.h
intel/: CMakeLists.txt  FindIPP.cmake  svm_intel.cpp  svm_intel.h  svm_intel_math.h
matlab/: CMakeLists.txt
python/: svm.py
tests/: CMakeLists.txt  test_svm_speed.cpp
windows/: README.txt
